# e621-wrappers

./: README.md
.github/workflows/: codeql-analysis.yml
c#/E621_Wrapper/: E621_Wrapper.cs  E621_Wrapper.sln
c#/e621_api_test/: Program.cs  e621_api_test.csproj
java/: e621_wrapper.java
node js/: e621-endpoints.js  e621-nodejs.js  package-lock.json  package.json
python/: README.md  pyproject.toml  setup.cfg
python/src/e621-wrapper/: e621_endpoints.py
python/src/e621_wrapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/src/e621py_wrapper/: __init__.py  e621_endpoints.py  e621_wrapper.py
python/src/e621py_wrapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/src/e621py_wrapper/endpoints/: e621_endpoints.py
