[metadata]
name = e621py_wrapper
version = 0.1.6
author = Tracer755
author_email = jason@klasstek.com
description = A well featured wrapper for e621.net
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tracer755/e621-wrappers
project_urls =
    Bug Tracker = https://github.com/tracer755/e621-wrappers/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src